--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>script</title>
-    <script src="./src/main.js"></script>
+    <!-- <script src="./src/main.js"></script> -->
+    <!-- <script src="./src/main01.js"></script> -->
+    <!-- <script src="./src/main02.js"></script> -->
+    <!-- <script src="./src/main03.js"></script> -->
+    <!-- <script src="./src/main04.js"></script> -->
+    <!-- <script src="./src/main05.js"></script> -->
+    <script src="./src/main06.js"></script>
 </head>
 <body>
-    <h1>welcome</h1>
-    <!--  -->
 </body>
 </html>
