--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="./src/main03.js"></script> -->
     <!-- <script src="./src/main04.js"></script> -->
     <!-- <script src="./src/main05.js"></script> -->
-    <script src="./src/main06.js"></script>
+    <!-- <script src="./src/main06.js"></script> -->
+    <script src="./js02/main.js"></script>
 </head>
 <body>
 </body>
