--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- <script src="./src/main04.js"></script> -->
     <!-- <script src="./src/main05.js"></script> -->
     <!-- <script src="./src/main06.js"></script> -->
-    <script src="./js02/main.js"></script>
+    <!-- <script src="./js02/main.js"></script> -->
+    <!-- <script src="./js02/main02.js"></script> -->
+    <script src="./js02/index.js"></script>
 </head>
 <body>
 </body>
