--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!-- <script src="./src/main06.js"></script> -->
     <!-- <script src="./js02/main.js"></script> -->
     <!-- <script src="./js02/main02.js"></script> -->
-    <script src="./js02/index.js"></script>
+    <!-- <script src="./js02/index.js"></script> -->
+    <!-- <script src="./js03/data01.js"></script> -->
+    <!-- <script src="./js04/exp01.js"></script> -->
+    <script src="./js04/exp02.js"></script>
 </head>
 <body>
 </body>
